--- a/JS_es3.html
+++ b/JS_es3.html
@@ -1,17 +1,30 @@
 <html>
   <head>
     <title>JS ES 3</title>
+    <style>
+      table,
+      td,
+      th {
+        border: 1px solid black;
+      }
+    </style>
     <body>
       <h1>CALCOLATRICE</h1>
-      <h2>JS es 3</h2>
-      <h3>Simple calculator with dynamic access to local storage</h3>
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-      <div id="div1"></div>
-      <button id="btn1">invia</button>
-      <table>
-          
+      <table id="tab">
+        <tr>
+          <th>numero</th>
+        </tr>
       </table>
-      <script></script>
+      <input type="number" id="num1" />
+      <button id="btn1">aggiungi</button>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      <script>
+        $("#btn1").click(function () {
+          var n1 = parseInt($("#num1").val());
+          var string = "<tr><td>" + n1 + "</tr></td>";
+          $("#tab").append(string);
+        });
+      </script>
     </body>
   </head>
 </html>
