--- a/JS_es3.html
+++ b/JS_es3.html
@@ -12,19 +12,23 @@
       <h1>CALCOLATRICE</h1>
       <table id="tab">
         <tr>
-          <th>numero</th>
+          <th>N1</th>
+          <th>mark</th>
+          <th>N2</th>
+          <th>result</th>
         </tr>
       </table>
-      <input type="number" id="num1" />
-      <button id="btn1">aggiungi</button>
+      <input type="number" id="num1" placeholder="first number"/>
+    </br></br>
+      <input type="number" id="num2" placeholder="first number"/>
+    </br></br>
+      <button id="btn+">add</button>
+      <button id="btn*">moltiplica</button>
+      <button id="btn-">minus</button>
+      <button id="btn/">divide</button>
+      
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-      <script>
-        $("#btn1").click(function () {
-          var n1 = parseInt($("#num1").val());
-          var string = "<tr><td>" + n1 + "</tr></td>";
-          $("#tab").append(string);
-        });
-      </script>
+      <script src="es3.js"></script>
     </body>
   </head>
 </html>
