--- a/JS_es3.html
+++ b/JS_es3.html
@@ -13,20 +13,19 @@
       <table id="tab">
         <tr>
           <th>N1</th>
-          <th>mark</th>
+          <th>Mark</th>
           <th>N2</th>
-          <th>result</th>
+          <th>Result</th>
         </tr>
       </table>
       <input type="number" id="num1" placeholder="first number"/>
     </br></br>
-      <input type="number" id="num2" placeholder="first number"/>
+    <input type="number" id="num2" placeholder="second number"/>
     </br></br>
-      <button id="btn+">add</button>
-      <button id="btn*">moltiplica</button>
-      <button id="btn-">minus</button>
-      <button id="btn/">divide</button>
-      
+      <button id="btnPlus">+</button>
+      <button id="btnSub">-</button>
+      <button id="btnMulti">*</button>
+      <button id="btnDivide">/</button>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       <script src="es3.js"></script>
     </body>
